creacion de Clase validacion(prueba),Creacion pag Error(prueba),validacion campos registro

--- a/tp-cuatrimestral-equipo15/tp-cuatrimestral-equipo15.csproj
+++ b/tp-cuatrimestral-equipo15/tp-cuatrimestral-equipo15.csproj
@@ -70,6 +70,7 @@
     <Content Include="AltaCurso.aspx" />
     <Content Include="Default.aspx" />
     <Content Include="DetallesCurso.aspx" />
+    <Content Include="Error.aspx" />
     <Content Include="Global.asax" />
     <Content Include="Login.aspx" />
     <Content Include="Perfil.aspx" />
@@ -97,6 +98,13 @@
     </Compile>
     <Compile Include="DetallesCurso.aspx.designer.cs">
       <DependentUpon>DetallesCurso.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="Error.aspx.cs">
+      <DependentUpon>Error.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Error.aspx.designer.cs">
+      <DependentUpon>Error.aspx</DependentUpon>
     </Compile>
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
@@ -130,6 +138,7 @@
     <Compile Include="Register.aspx.designer.cs">
       <DependentUpon>Register.aspx</DependentUpon>
     </Compile>
+    <Compile Include="Validacion.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Master.Master" />
