--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,9 @@
 ##
 ## Get latest from https://github.com/github/gitignore/blob/master/VisualStudio.gitignore
 
+# Ignorar archivos de configuración
+tp-cuatrimestral-equipo15/Web.Config
+
 # User-specific files
 *.rsuser
 *.suo
