--- a/tp-cuatrimestral-equipo15/tp-cuatrimestral-equipo15.csproj
+++ b/tp-cuatrimestral-equipo15/tp-cuatrimestral-equipo15.csproj
@@ -74,7 +74,7 @@
     <Content Include="Global.asax" />
     <Content Include="Login.aspx" />
     <Content Include="MyCourses.aspx" />
-    <Content Include="Perfil.aspx" />
+    <Content Include="ModPerfil.aspx" />
     <Content Include="Register.aspx" />
     <Content Include="Web.config" />
   </ItemGroup>
@@ -131,12 +131,12 @@
     <Compile Include="MyCourses.aspx.designer.cs">
       <DependentUpon>MyCourses.aspx</DependentUpon>
     </Compile>
-    <Compile Include="Perfil.aspx.cs">
-      <DependentUpon>Perfil.aspx</DependentUpon>
+    <Compile Include="ModPerfil.aspx.cs">
+      <DependentUpon>ModPerfil.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
     </Compile>
-    <Compile Include="Perfil.aspx.designer.cs">
-      <DependentUpon>Perfil.aspx</DependentUpon>
+    <Compile Include="ModPerfil.aspx.designer.cs">
+      <DependentUpon>ModPerfil.aspx</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Register.aspx.cs">
