--- a/Negocio/Negocio.csproj
+++ b/Negocio/Negocio.csproj
@@ -48,6 +48,7 @@
     <Compile Include="obj\Debug\.NETFramework,Version=v4.8.AssemblyAttributes.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="UsuarioNegocio.cs" />
+    <Compile Include="UsuariosXCursosNegocio.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="obj\Debug\DesignTimeResolveAssemblyReferencesInput.cache" />
