--- a/tp-cuatrimestral-equipo15/tp-cuatrimestral-equipo15.csproj
+++ b/tp-cuatrimestral-equipo15/tp-cuatrimestral-equipo15.csproj
@@ -67,6 +67,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Content Include="AdministratorHome.aspx" />
     <Content Include="AltaCurso.aspx" />
     <Content Include="Default.aspx" />
     <Content Include="DetallesCurso.aspx" />
@@ -79,6 +80,13 @@
     <Content Include="Web.config" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AdministratorHome.aspx.cs">
+      <DependentUpon>AdministratorHome.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="AdministratorHome.aspx.designer.cs">
+      <DependentUpon>AdministratorHome.aspx</DependentUpon>
+    </Compile>
     <Compile Include="AltaCurso.aspx.cs">
       <DependentUpon>AltaCurso.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
