Arreglo error de DetallesPerfil y valido ModPerfil

--- a/tp-cuatrimestral-equipo15/Web.config
+++ b/tp-cuatrimestral-equipo15/Web.config
@@ -22,6 +22,9 @@
                 <add value="Login.aspx" />
             </files>
         </defaultDocument>
+	    <staticContent>
+          <clientCache cacheControlMode="DisableCache" />
+        </staticContent>
     </system.webServer>
     <system.codedom>
     <compilers>
