--- a/Dominio/Dominio.csproj
+++ b/Dominio/Dominio.csproj
@@ -44,6 +44,7 @@
     <Compile Include="Curso.cs" />
     <Compile Include="obj\Debug\.NETFramework,Version=v4.8.AssemblyAttributes.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SectionControlPanel.cs" />
     <Compile Include="Usuario.cs" />
   </ItemGroup>
   <ItemGroup>
