--- a/tp-cuatrimestral-equipo15/tp-cuatrimestral-equipo15.csproj
+++ b/tp-cuatrimestral-equipo15/tp-cuatrimestral-equipo15.csproj
@@ -67,8 +67,10 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Content Include="AdministratorControlPanel.aspx" />
     <Content Include="AdministratorHome.aspx" />
     <Content Include="AltaCurso.aspx" />
+    <Content Include="CourseControlPanel.aspx" />
     <Content Include="Default.aspx" />
     <Content Include="DetallesCurso.aspx" />
     <Content Include="DetallesPerfil.aspx" />
@@ -77,9 +79,17 @@
     <Content Include="MyCourses.aspx" />
     <Content Include="ModPerfil.aspx" />
     <Content Include="Register.aspx" />
+    <Content Include="StudentControlPanel.aspx" />
     <Content Include="Web.config" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AdministratorControlPanel.aspx.cs">
+      <DependentUpon>AdministratorControlPanel.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="AdministratorControlPanel.aspx.designer.cs">
+      <DependentUpon>AdministratorControlPanel.aspx</DependentUpon>
+    </Compile>
     <Compile Include="AdministratorHome.aspx.cs">
       <DependentUpon>AdministratorHome.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
@@ -93,6 +103,13 @@
     </Compile>
     <Compile Include="AltaCurso.aspx.designer.cs">
       <DependentUpon>AltaCurso.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="CourseControlPanel.aspx.cs">
+      <DependentUpon>CourseControlPanel.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="CourseControlPanel.aspx.designer.cs">
+      <DependentUpon>CourseControlPanel.aspx</DependentUpon>
     </Compile>
     <Compile Include="Default.aspx.cs">
       <DependentUpon>Default.aspx</DependentUpon>
@@ -153,6 +170,13 @@
     </Compile>
     <Compile Include="Register.aspx.designer.cs">
       <DependentUpon>Register.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="StudentControlPanel.aspx.cs">
+      <DependentUpon>StudentControlPanel.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="StudentControlPanel.aspx.designer.cs">
+      <DependentUpon>StudentControlPanel.aspx</DependentUpon>
     </Compile>
     <Compile Include="Validacion.cs" />
   </ItemGroup>
