Implementación de funcionalidad para que un usuario pueda solicitar la inscripción a un curso, la misma pueda ser aprobada o rechazada por el administrador, mientras este no realiza una acción quedará como pendiente.

--- a/Negocio/Negocio.csproj
+++ b/Negocio/Negocio.csproj
@@ -43,6 +43,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="AccesoDatos.cs" />
+    <Compile Include="BusinessEnrollment.cs" />
     <Compile Include="CursoNegocio.cs" />
     <Compile Include="EmailService.cs" />
     <Compile Include="obj\Debug\.NETFramework,Version=v4.8.AssemblyAttributes.cs" />
