Primeras pruebas con la integración de moodle en la plataforma.

--- a/Negocio/Negocio.csproj
+++ b/Negocio/Negocio.csproj
@@ -64,6 +64,10 @@
       <Project>{fb00466f-1297-4866-a86f-e43b3c8c80ba}</Project>
       <Name>Dominio</Name>
     </ProjectReference>
+    <ProjectReference Include="..\MoodleConection\MoodleConection.csproj">
+      <Project>{bce42bf5-67df-48f4-8cb1-bc5b47ed6824}</Project>
+      <Name>MoodleConection</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
