--- a/tp-cuatrimestral-equipo15/Web.config
+++ b/tp-cuatrimestral-equipo15/Web.config
@@ -8,8 +8,8 @@
 		<add key="SMTP_HOST" value="smtp.gmail.com" />
 		<add key="SMTP_PORT" value="587" />
 		<add key="SMTP_ENABLE" value="true" />
-		<add key="SMTP_EMAIL" value="test.app.projects.01@gmail.com" />
-		<add key="SMTP_PASSWORD" value="ncraidciwbpxvmcd" />
+		<add key="SMTP_EMAIL" value="" />
+		<add key="SMTP_PASSWORD" value="" />
 	</appSettings>
     <system.web>
         <compilation debug="true" targetFramework="4.8" />
